# ros2_tracing

./: .gitlab-ci.yml  LTTng_QUALITY_DECLARATION.md  README.md  all.repos  ci_source_deps.repos  codecov.yml  design.md  instrumentation.repos  instrumented.repos  package.xml  setup.cfg  setup.py  tracing.repos
.github/workflows/: dco.yml  sanity.yml  test.yml
doc/: design_ros_2.md  plan.md  public_post_plan.md  ros_2.md
doc/img/: tracing_architecture.xml
docker-ci-base/: Dockerfile
lttngpy/: CHANGELOG.rst  CMakeLists.txt  package.xml
lttngpy/lttngpy/: __init__.py  impl.py
lttngpy/src/lttngpy/: _lttngpy_pybind11.cpp  channel.cpp  channel.hpp  config.hpp.in  context_app.cpp  context_app.hpp  context_lttng.cpp  context_lttng.hpp  context_perf.cpp  context_perf.hpp  event.cpp  event.hpp  lttng.cpp  lttng.hpp  session.cpp  session.hpp  status.cpp  status.hpp  utils.hpp
lttngpy/test/: test_constants.py  test_context_app.cpp  test_context_lttng.cpp  test_context_perf.cpp  test_session.py
ros2trace/: CHANGELOG.rst  package.xml  setup.py
ros2trace/api/: __init__.py
ros2trace/ros2trace/api/: __init__.py
ros2trace/ros2trace/command/: __init__.py  trace.py
ros2trace/ros2trace/verb/: __init__.py  pause.py  resume.py  start.py  stop.py
ros2trace/test/ros2trace/: test_trace.py
test_ros2trace/: CHANGELOG.rst  package.xml  setup.py
test_ros2trace/test/test_ros2trace/: test_trace.py
test_tracetools/: CHANGELOG.rst  CMakeLists.txt  package.xml
test_tracetools/include/test_tracetools/: mark_process.hpp
test_tracetools/src/: mark_process.cpp  test_generic_ping.cpp  test_generic_pong.cpp  test_intra.cpp  test_lifecycle_client.cpp  test_lifecycle_node.cpp  test_ping.cpp  test_pong.cpp  test_publisher.cpp  test_service.cpp  test_service_ping.cpp  test_service_pong.cpp  test_timer.cpp
test_tracetools/test/: test_buffer.py  test_executor.py  test_generic_pub_sub.py  test_generic_subscription.py  test_intra.py  test_intra_pub_sub.py  test_lifecycle_node.py  test_node.py  test_pub_sub.py  test_publisher.py  test_service.py  test_subscription.py  test_timer.py  test_utils.cpp
test_tracetools_launch/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
test_tracetools_launch/test/test_tracetools_launch/: test_trace_action.py
tracetools/: .gitignore  CHANGELOG.rst  CMakeLists.txt  Doxyfile  QUALITY_DECLARATION.md  README.md  package.xml
tracetools/include/tracetools/: config.h.in  status.h  tp_call.h  tracetools.h  utils.hpp  visibility_control.h  visibility_control.hpp
tracetools/lttng/: tp_call.tp
tracetools/scripts/: setup-lttng.sh  trace.sh
tracetools/src/: .gitignore  status.c  status_tool.c  tp_call.c  tp_call.tp  tracetools.c  utils.cpp
tracetools/test/: test_status.cpp  test_utils.cpp  test_utils.hpp
tracetools_launch/: CHANGELOG.rst  destroy.py  package.xml  setup.cfg  setup.py  trace.py
tracetools_launch/launch/: example.launch.py  example.launch.xml  example.launch.yaml
tracetools_launch/test/: test_mypy.py
tracetools_launch/test/tracetools_launch/: test_ld_preload_action.py  test_trace_action.py
tracetools_launch/tracetools_launch/: __init__.py  action.py  trace.py
tracetools_launch/tracetools_launch/actions/: ld_preload.py
tracetools_read/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
tracetools_read/tracetools_read/: __init__.py  trace.py  utils.py
tracetools_test/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
tracetools_test/docs/source/: about.rst  api.rst  conf.py  index.rst
tracetools_test/docs/source/api/: trace_test_case.rst
tracetools_test/src/: test_intra.cpp  test_ping.cpp  test_pong.cpp  test_publisher.cpp  test_service.cpp  test_service_ping.cpp  test_service_pong.cpp  test_subscription.cpp  test_timer.cpp
tracetools_test/test/: test_executor.py  test_intra.py  test_lifecycle_node.py  test_node.py  test_pub_sub.py  test_publisher.cpp  test_publisher.py  test_service.py  test_service_callback.py  test_status.py  test_subscription.py  test_subscription_callback.py  test_timer.py  test_utils.cpp
tracetools_test/tracetools_test/: case.py  mark_process.py  utils.py
tracetools_trace/: .coveragerc  CHANGELOG.rst  package.xml  setup.cfg  setup.py  trace.py
tracetools_trace/test/tracetools_trace/: test_lttng_tracing.py  test_names.py  test_trace_directory.py
tracetools_trace/tools/: args.py  lttng.py  names.py
tracetools_trace/tracetools_trace/: trace.py
tracetools_trace/tracetools_trace/tools/: __init__.py  args.py  lttng.py  lttng_impl.py  lttng_stub.py  names.py  path.py  signals.py  tracepoints.py
