<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lttngpy</name>
  <version>8.2.0</version>
  <description>liblttng-ctl Python bindings</description>
  <maintainer email="christophe.bedard@apex.ai">Christophe Bedard</maintainer>
  <license>Apache License 2.0</license>
  <url type="website">https://docs.ros.org/en/rolling/p/lttngpy/</url>
  <url type="repository">https://github.com/ros2/ros2_tracing</url>
  <url type="bugtracker">https://github.com/ros2/ros2_tracing/issues</url>
  <author email="christophe.bedard@apex.ai">Christophe Bedard</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>python_cmake_module</buildtool_depend>

  <depend>liblttng-ctl-dev</depend>

  <build_depend>pybind11_vendor</build_depend>

  <exec_depend>rpyutils</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
