<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros2trace</name>
  <version>1.0.5</version>
  <description>The trace command for ROS 2 command line tools.</description>
  <maintainer email="bedard.christophe@gmail.com">Christophe Bedard</maintainer>
  <maintainer email="ingo.luetkebohle@de.bosch.com">Ingo Lütkebohle</maintainer>
  <license>Apache 2.0</license>
  <author email="fixed-term.christophe.bourquebedard@de.bosch.com">Christophe Bedard</author>

  <depend>ros2cli</depend>
  <depend>tracetools_trace</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_mypy</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
