<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>test_tracetools</name>
  <version>4.1.1</version>
  <description>Tests for the tracetools package.</description>
  <maintainer email="bedard.christophe@gmail.com">Christophe Bedard</maintainer>
  <maintainer email="ingo.luetkebohle@de.bosch.com">Ingo Luetkebohle</maintainer>
  <license>Apache 2.0</license>
  <url type="website">https://gitlab.com/ros-tracing/ros2_tracing</url>
  <url type="repository">https://gitlab.com/ros-tracing/ros2_tracing</url>
  <url type="bugtracker">https://gitlab.com/ros-tracing/ros2_tracing/-/issues</url>
  <author email="fixed-term.christophe.bourquebedard@de.bosch.com">Christophe Bedard</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <build_depend>lifecycle_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_mypy</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-cov</test_depend>
  <test_depend>tracetools</test_depend>
  <test_depend>tracetools_test</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
