<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>test_tracetools</name>
  <version>8.2.0</version>
  <description>Tests for the tracetools package.</description>
  <maintainer email="bedard.christophe@gmail.com">Christophe Bedard</maintainer>
  <maintainer email="ingo.luetkebohle@de.bosch.com">Ingo Luetkebohle</maintainer>
  <license>Apache 2.0</license>
  <url type="website">https://github.com/ros2/ros2_tracing</url>
  <url type="repository">https://github.com/ros2/ros2_tracing</url>
  <url type="bugtracker">https://github.com/ros2/ros2_tracing/issues</url>
  <author email="fixed-term.christophe.bourquebedard@de.bosch.com">Christophe Bedard</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>pkg-config</buildtool_depend>

  <!-- This is a test package, but some of the utilities from this package are
       used in downstream test packages.  Because of that, we build_export_depend
       the dependencies that those packages use so that colcon properly sets up the
       environment when running those tests.
  -->
  <build_export_depend>liblttng-ust-dev</build_export_depend>
  <build_export_depend>lifecycle_msgs</build_export_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>rclcpp_lifecycle</build_export_depend>
  <build_export_depend>rcpputils</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_mypy</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>liblttng-ust-dev</test_depend>
  <test_depend>lifecycle_msgs</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-cov</test_depend>
  <test_depend>rclcpp</test_depend>
  <test_depend>rclcpp_lifecycle</test_depend>
  <test_depend>rcpputils</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>std_srvs</test_depend>
  <test_depend>tracetools</test_depend>
  <test_depend>tracetools_test</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
